--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 body {
     font: normal 18px/1.5 "Lucida Console", Monaco, monospace;
-    background: #7c2727; 
+    background: #7e9a9a; 
     color: rgb(0, 0, 0); 
 
     padding: 50px 0;
@@ -17,4 +17,21 @@ body {
     margin: auto;
     width: 30%;
     padding: 50px;
+  }
+
+  .filtered {
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
+  .filtered li {
+    background:white;
+    list-style: none;
+    border-bottom: 1px solid #D8D8D8;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
+    margin:0;
+    padding:20px;
+    text-transform: capitalize;
+    display: flex;
+    justify-content: space-between;
   }
