Added google fonts

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-    font: normal 18px/1.5 "Lucida Console", Monaco, monospace;
+    font-family: 'Noto Sans TC', sans-serif;
     background: #7e9a9a; 
     color: rgb(0, 0, 0); 
 
