--- a/public/style.css
+++ b/public/style.css
@@ -25,13 +25,13 @@ body {
     position: relative;
   }
   .filtered li {
-    background:white;
+    background:#db9833;
     list-style: none;
     border-bottom: 1px solid #D8D8D8;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
     margin:0;
     padding:20px;
-    text-transform: capitalize;
     display: flex;
     justify-content: space-between;
+    background: linear-gradient(to bottom, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
   }
