--- a/public/style.css
+++ b/public/style.css
@@ -4,23 +4,24 @@ body {
     color: rgb(0, 0, 0); 
 
     padding: 50px 0;
-  }
+}
 
-  .container {
+.container {
     width: 80%;
     max-width: 1200px;
     text-align: center; 
     margin: 0 auto;
-  }
+}
   
-  .center {
+.center {
     margin: auto;
     width: 30%;
     padding: 15px;
     text-align: center;
-  }
+    font-size:3.7vw;
+}
   /*Styles for Search Form*/
-  input {
+input {
     background: #f1e3ce;
     width: 120%;
     padding: 10px;
@@ -31,20 +32,20 @@ body {
     border: 5px solid #f1e3ce;
     border-radius: 5px;
     font-size: 35px;
-  }
+}
 
-  .search-form {
+.search-form {
     max-width: 500px;
     margin: 20px auto;
-  }
+}
 
   /* Styles for filtered Resturants*/
-  .filtered {
+.filtered {
     margin: 0;
     padding: 0;
     position: relative;
-  }
-  .filtered li {
+}
+.filtered li {
     background: rgb(34,193,195);
     list-style: none;
     border: linear-gradient(0deg, rgba(139,192,232,1) 11%, rgba(76,159,222,1) 72%);
@@ -53,4 +54,6 @@ body {
     padding:20px;
     display: flex;
     justify-content: space-between;
-    background: linear-gradient(0deg, rgba(139,192,232,1) 11%, rgba(76,159,222,1) 72%);  }
+    background: linear-gradient(0deg, rgba(139,192,232,1) 11%, rgba(76,159,222,1) 72%);  
+}
+
